Use ClassPathForMain to get the classpath (#46)
Since SQ 10.6 the sonar-java plugin isn't on the plugin's classpath when
SQ is configured to only download the required plugins.